<resources>
    <string name="app_name">NeiHanDuanZi</string>
    <string name="activity_tuijian">推荐</string>
    <string name="activity_duanzi">段子</string>
    <string name="activity_shipin">视频</string>
    <string name="activity_remen">热门</string>
    <string name="activity_guanzhu">关注</string>
    <string name="activity_yznc">椰汁奶茶</string>
    <string name="activity_qianming">编辑个性签名</string>
    <string name="activity_wodeguanzhu">我的关注</string>
    <string name="activity_wodeshoucang">我的收藏</string>
    <string name="activity_sousuohaoyou">搜索好友</string>
    <string name="activity_xiaoxitongzhi">消息通知</string>
    <string name="activity_yejianmoshi">夜间模式</string>
    <string name="activity_wodezuopin">我的作品</string>
    <string name="activity_shezhi">设置</string>
    <string name="activity_fanhui">返回</string>
    <string name="activity_jianchagengxin">检查更新</string>
    <string name="activity_yijianfankui">意见反馈</string>
    <string name="activity_guanyuyikezhong">关于一刻钟</string>
    <string name="activity_qingchuhuancun">清除缓存</string>
    <string name="activity_tuichudenglu">退出登录</string>
    <string name="activity_lingyiyi">0.1.1</string>
    <string name="activity_yierba">128M</string>
    <string name="activity_wodeguanzhu_remen">热门关注</string>


    <string name="loginName">账号</string>
    <string name="loginPass">密码</string>
    <string name="Primordial">原生登陆</string>

    <string name="taohuaan1">桃花坞里桃花庵，</string>
    <string name="taohuaan2">桃花庵下桃花仙；</string>
    <string name="taohuaan3">桃花仙人种桃树，</string>
    <string name="taohuaan4">又摘桃花卖酒钱。</string>

    <string name="zhucezhanghao">注册账号</string>
    <string name="tianjiashuiyin">添加水印</string>
    <string name="tianjiaguanzhu"> + 关注</string>
    <string name="zengqiang">增强</string>
    <string name="lvjing">滤镜</string>
    <string name="quxiao">取消</string>
    <string name="queding">确定</string>
    <string name="otherlogin">其他方式登录</string>
    <string name="dianjifabiao">点击发表</string>
    <string name="qingshuru">请输入内容，禁止输入色情！！！！！</string>
    <string name="xuhua">虚化</string>
    <string name="shanchu">删除</string>
    <string name="bianji">编辑</string>
    <string name="remenguanzhu">热门关注</string>
    <string name="guanjianzi">请输入关键字</string>
    <string name="quanxuan">全选</string>
    <string name="sousuohaoyou">搜索好友</string>
    <string name="sediao">色调</string>
    <string name="baohedu">饱和度</string>
    <string name="liangdu">亮度</string>
    <string name="yuantu">原图</string>
    <string name="dipian">底片</string>
    <string name="laozhaopian">老照片</string>
    <string name="fudiao">浮雕</string>
    <string name="location">请打开GPS选项</string>

</resources>
