<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"></android.support.v4.view.ViewPager>
    <ImageView
        android:background="#dd000000"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />
    <TextView
        android:textColor="#ffffff"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:id="@+id/bt"
        android:text="@string/xuhua"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textColor="#ffffff"
        android:layout_alignParentRight="true"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/bt_delete"
        android:text="@string/shanchu"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:background="#dd000000"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />
    <TextView
        android:layout_alignParentBottom="true"
        android:textColor="#ffffff"
        android:layout_marginBottom="16dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/edit"
        android:text="@string/bianji"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>