<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.MyAttentionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#03a9f4"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/activity_sgezhi_image_bank"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="activity_bt_bank"
            android:src="@mipmap/raw_1500019926" />

        <TextView
            android:layout_width="33dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="activity_bt_bank"
            android:text="@string/activity_fanhui"
            android:textColor="#fff"
            android:textSize="16dp" />


        <TextView
            android:layout_width="65dp"
            android:layout_height="45dp"
            android:layout_weight="7"
            android:gravity="center"
            android:text="@string/activity_wodeguanzhu"
            android:textColor="#fff"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/activity_tv_wodeguanzhu"
            android:layout_width="65dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/activity_wodeguanzhu_remen"
            android:textColor="#fff"
            android:textSize="16dp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/activity_recycler_wodeguanzhu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"></android.support.v7.widget.RecyclerView>

</LinearLayout>
