<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    tools:context=".view.activity.HotAttentionActivity">

    <LinearLayout
        android:background="#03a9f4"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <TextView
            android:id="@+id/activity_remen_tv"
            android:text="@string/quxiao"
            android:textColor="#fff"
            android:layout_marginLeft="10dp"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/remenguanzhu"
            android:textColor="#fff"
            android:layout_marginLeft="110dp"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:hint="@string/guanjianzi"
            android:textColor="#000"
            android:textSize="16dp"
            android:background="@drawable/sousuo_edit"
            android:id="@+id/activity_sousuo_et"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/activity_sousuo_img"
            android:layout_marginLeft="-30dp"
            android:src="@drawable/raw_1499946865"
            android:layout_gravity="center"
            android:layout_width="30dp"
            android:layout_height="30dp" />
    </LinearLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/activity_remen_tab"
        android:layout_width="match_parent"
        android:layout_height="35dp"></android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/activity_remen_vp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></android.support.v4.view.ViewPager>
</LinearLayout>
